--- a/src/view/MainView.fxml
+++ b/src/view/MainView.fxml
@@ -1,163 +1,161 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Separator?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.layout.VBox?>
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="398.0" prefWidth="349.0" xmlns="http://javafx.com/javafx/8.0.191" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.MainViewController">
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<AnchorPane xmlns:fx="http://javafx.com/fxml/1" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
+            prefHeight="398.0" prefWidth="349.0" xmlns="http://javafx.com/javafx/8.0.191"
+            fx:controller="view.MainViewController">
     <children>
-      <VBox layoutX="18.0" prefHeight="78.0" prefWidth="307.0">
-         <children>
-            <HBox alignment="CENTER" prefHeight="43.0" prefWidth="307.0">
-               <children>
-                      <Label text="EmpID">
-                     <opaqueInsets>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                     </opaqueInsets>
-                     <HBox.margin>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                     </HBox.margin>
-                      </Label>
-                      <TextField fx:id="empIDField" maxWidth="77.0" prefHeight="25.0" prefWidth="77.0">
-                     <opaqueInsets>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                     </opaqueInsets>
-                     <HBox.margin>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                     </HBox.margin>
-                      </TextField>
-               </children>
-            </HBox>
-            <HBox alignment="CENTER" prefHeight="48.0" prefWidth="307.0">
-               <children>
+        <VBox layoutX="18.0" prefHeight="78.0" prefWidth="307.0">
+            <children>
+                <HBox alignment="CENTER" prefHeight="43.0" prefWidth="307.0">
+                    <children>
+                        <Label text="EmpID">
+                            <opaqueInsets>
+                                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+                            </opaqueInsets>
+                            <HBox.margin>
+                                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+                            </HBox.margin>
+                        </Label>
+                        <TextField fx:id="empIDField" maxWidth="77.0" prefHeight="25.0" prefWidth="77.0">
+                            <opaqueInsets>
+                                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+                            </opaqueInsets>
+                            <HBox.margin>
+                                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+                            </HBox.margin>
+                        </TextField>
+                    </children>
+                </HBox>
+                <HBox alignment="CENTER" prefHeight="48.0" prefWidth="307.0">
+                    <children>
                         <Button fx:id="loadButton" focusTraversable="false" mnemonicParsing="false" text="Load">
                             <HBox.margin>
-                                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
                             </HBox.margin>
                         </Button>
                         <Button fx:id="saveButton" focusTraversable="false" mnemonicParsing="false" text="Save">
                             <HBox.margin>
-                                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
                             </HBox.margin>
                         </Button>
                         <Button fx:id="clearButton" focusTraversable="false" mnemonicParsing="false" text="Clear">
                             <HBox.margin>
-                                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
                             </HBox.margin>
                         </Button>
-               </children>
-            </HBox>
-         </children>
-      </VBox>
+                    </children>
+                </HBox>
+            </children>
+        </VBox>
         <GridPane layoutY="98.0" prefHeight="295.0" prefWidth="343.0">
             <columnConstraints>
-                <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="164.0" minWidth="10.0" prefWidth="84.0" />
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="259.0" minWidth="10.0" prefWidth="253.0" />
+                <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="164.0" minWidth="10.0"
+                                   prefWidth="84.0"/>
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="259.0" minWidth="10.0" prefWidth="253.0"/>
             </columnConstraints>
             <rowConstraints>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
             </rowConstraints>
             <children>
                 <Label text="Last Name">
                     <GridPane.margin>
-                        <Insets right="10.0" />
+                        <Insets right="10.0"/>
                     </GridPane.margin>
                 </Label>
                 <Label text="First Name" GridPane.rowIndex="1">
                     <GridPane.margin>
-                        <Insets right="10.0" />
+                        <Insets right="10.0"/>
                     </GridPane.margin>
                 </Label>
                 <Label text="Salary" GridPane.rowIndex="2">
                     <GridPane.margin>
-                        <Insets right="10.0" />
+                        <Insets right="10.0"/>
                     </GridPane.margin>
                 </Label>
                 <Label text="Street" GridPane.rowIndex="3">
                     <GridPane.margin>
-                        <Insets right="10.0" />
+                        <Insets right="10.0"/>
                     </GridPane.margin>
                 </Label>
                 <Label text="City" GridPane.rowIndex="4">
                     <GridPane.margin>
-                        <Insets right="10.0" />
+                        <Insets right="10.0"/>
                     </GridPane.margin>
                 </Label>
                 <Label text="State" GridPane.rowIndex="5">
                     <GridPane.margin>
-                        <Insets right="10.0" />
+                        <Insets right="10.0"/>
                     </GridPane.margin>
                 </Label>
                 <TextField fx:id="lNameField" GridPane.columnIndex="1">
                     <GridPane.margin>
-                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
                     </GridPane.margin>
                 </TextField>
                 <TextField fx:id="fNameField" GridPane.columnIndex="1" GridPane.rowIndex="1">
                     <GridPane.margin>
-                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
                     </GridPane.margin>
                 </TextField>
                 <TextField fx:id="salaryField" GridPane.columnIndex="1" GridPane.rowIndex="2">
                     <GridPane.margin>
-                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
                     </GridPane.margin>
                 </TextField>
                 <TextField fx:id="streetField" GridPane.columnIndex="1" GridPane.rowIndex="3">
                     <GridPane.margin>
-                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
                     </GridPane.margin>
                 </TextField>
                 <TextField fx:id="cityField" GridPane.columnIndex="1" GridPane.rowIndex="4">
                     <GridPane.margin>
-                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
                     </GridPane.margin>
                 </TextField>
-                <TextField fx:id="stateField" maxWidth="50.0" prefWidth="50.0" GridPane.columnIndex="1" GridPane.rowIndex="5">
+                <TextField fx:id="stateField" maxWidth="50.0" prefWidth="50.0" GridPane.columnIndex="1"
+                           GridPane.rowIndex="5">
                     <GridPane.margin>
-                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
                     </GridPane.margin>
                 </TextField>
                 <Label text="Zip" GridPane.rowIndex="6">
                     <GridPane.margin>
-                        <Insets right="10.0" />
+                        <Insets right="10.0"/>
                     </GridPane.margin>
                 </Label>
                 <Label text="RevNum" GridPane.rowIndex="7">
                     <GridPane.margin>
-                        <Insets right="10.0" />
+                        <Insets right="10.0"/>
                     </GridPane.margin>
                 </Label>
-                <TextField fx:id="zipField" maxWidth="100.0" prefWidth="100.0" GridPane.columnIndex="1" GridPane.rowIndex="6">
+                <TextField fx:id="zipField" maxWidth="100.0" prefWidth="100.0" GridPane.columnIndex="1"
+                           GridPane.rowIndex="6">
                     <GridPane.margin>
-                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
                     </GridPane.margin>
                 </TextField>
-                <TextField fx:id="revNumField" disable="true" editable="false" maxWidth="50.0" minWidth="50.0" prefHeight="25.0" prefWidth="50.0" GridPane.columnIndex="1" GridPane.hgrow="NEVER" GridPane.rowIndex="7">
+                <TextField fx:id="revNumField" disable="true" editable="false" maxWidth="50.0" minWidth="50.0"
+                           prefHeight="25.0" prefWidth="50.0" GridPane.columnIndex="1" GridPane.hgrow="NEVER"
+                           GridPane.rowIndex="7">
                     <GridPane.margin>
-                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
                     </GridPane.margin>
                 </TextField>
             </children>
             <opaqueInsets>
-                <Insets right="10.0" />
+                <Insets right="10.0"/>
             </opaqueInsets>
         </GridPane>
-      <Separator layoutX="15.0" layoutY="89.0" prefHeight="3.0" prefWidth="319.0" />
+        <Separator layoutX="15.0" layoutY="89.0" prefHeight="3.0" prefWidth="319.0"/>
     </children>
 </AnchorPane>
